--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -3,6 +3,7 @@
 
 :root {
   --clr-bg-main: white;
+  --clr-nav-bg: pink;
 }
 
 ::-moz-selection { /* Code for Firefox */
@@ -23,7 +24,63 @@
   padding: 0;
 }
 
-h1 {
-  
+.navbar {
+  background: var(--clr-nav-bg);
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  position: sticky;
+  top: 0;
+  z-index: 99;
+
+  .navbar__container {
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 0 50px;
+
+    #navbar__logo {
+      font-weight: 400;
+      font-size: 2rem;
+      text-decoration: none;
+      align-self: center;
+      background-color: black;
+      background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+      background-size: 100%;
+      -webkit-background-clip: text;
+      -moz-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      -moz-text-fill-color: transparent;
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+    }
+
+    .fa-gem {
+      margin-right: 0.5rem
+    }
+
+    .navbar__menu {
+      display: flex;
+      align-items: center;
+      list-style: none;
+      text-align: center;
+
+      .navbar__item {
+        height: 80px;
+
+        .navbar__link {
+
+        }
+      }
+
+    }
+  }
 }
 
