--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -76,8 +76,22 @@
         height: 80px;
 
         .navbar__link {
-
+          color: #fff;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          text-decoration: none;
+          padding: 0 1rem;
+          height: 100%;
         }
+      }
+
+      .navbar__btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 1rem;
+        width: 100%;
       }
 
     }
