--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -24,6 +24,31 @@
   padding: 0;
 }
 
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  padding: 10px 20px;
+  height: 100%;
+  width: 100%;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  background: #f77062;
+  color: #fff;
+}
+
+.button:hover {
+  background: #4837ff;
+  transition: all 300ms ease;
+}
+
+.navbar__link:hover {
+  background: #f77062;
+  transition: all 300ms ease;
+}
+
 .navbar {
   background: var(--clr-nav-bg);
   height: 80px;
@@ -95,6 +120,27 @@
       }
 
     }
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .navbar__container {
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    padding: 0;
+  }
+
+  .navbar__menu {
+    display: grid;
+    grid-template-columns: auto;
+    margin: 0;
+    width: 100%;
+    position: absolute;
+    top: -1000px;
   }
 }
 
