--- a/css/style.css
+++ b/css/style.css
@@ -489,6 +489,36 @@ body {
     width: 100%;
     position: absolute;
     top: -1000px;
+    opacity: 0;
+    transition: all 500ms ease;
+    height: 50vh;
+    z-index: -1;
+  }
+
+  .navbar__menu.active {
+    background: #131313;
+    top: 100%;
+    opacity: 1;
+    transition: all 500ms ease;
+    z-index: 99;
+    height: 50vh;
+    font-size: 1.6rem;
+  }
+
+  #navbar__logo {
+    padding-left: 25px;
+  }
+
+  .navbar__toggle .bar {
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    transition: all 300ms ease-in-out;
+    background: #fff;
+  }
+
+  .navbar__item {
+    width: 100%;
   }
 }
 
