--- a/css/style.css
+++ b/css/style.css
@@ -469,22 +469,24 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 1rem;
+  padding: 0 1rem 0 1rem;
   width: 100%;
 }
 
 @media screen and (max-width: 960px) {
-  .navbar__container {
+  .navbar .navbar__container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     height: 80px;
     z-index: 1;
     width: 100%;
     max-width: 1300px;
     padding: 0;
   }
-
-  .navbar__menu {
+  .navbar .navbar__container #navbar__logo {
+    padding-left: 25px;
+  }
+  .navbar .navbar__container .navbar__menu {
     display: grid;
     grid-template-columns: auto;
     margin: 0;
@@ -494,6 +496,18 @@ body {
     height: 50vh;
     z-index: -1;
     background: #131313;
+  }
+  .navbar .navbar__container .navbar__menu .navbar__btn {
+    padding-bottom: 2rem;
+  }
+  .navbar .navbar__container .navbar__menu .navbar__item {
+    width: 100%;
+  }
+  .navbar .navbar__container .navbar__menu .navbar__item .navbar__link {
+    text-align: center;
+    padding: 2rem;
+    width: 100%;
+    display: table;
   }
 
   .navbar__menu.active {
@@ -506,10 +520,6 @@ body {
     font-size: 1.6rem;
   }
 
-  #navbar__logo {
-    padding-left: 25px;
-  }
-
   .navbar__toggle .bar {
     width: 25px;
     height: 3px;
@@ -518,31 +528,19 @@ body {
     background: #fff;
   }
 
-  .navbar__item {
-    width: 100%;
-  }
-
-  .navbar__links {
-    text-align: center;
-    padding: 2rem;
-    width: 100%;
-    display: table;
-  }
-
   #mobile-menu {
     position: absolute;
     top: 20%;
     right: 5%;
-    transform: translate(5%, 20%);
-  }
-
-  .navbar__btn {
-    padding-bottom: 2rem;
   }
 
   .button {
     display: flex;
     justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 80px;
+    margin: 0;
   }
 }
 
