--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -1,12 +1,13 @@
-@use "normalize" as *;
-@use "typescale" as *;
+@use "normalize"as *;
+@use "typescale"as *;
 
 :root {
   --clr-bg-main: white;
   --clr-nav-bg: pink;
 }
 
-::-moz-selection { /* Code for Firefox */
+::-moz-selection {
+  /* Code for Firefox */
   color: cornflowerblue;
   background: white;
 }
@@ -117,7 +118,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 0 1rem;
+        padding: 0 1rem 0 1rem;
         width: 100%;
       }
 
@@ -126,28 +127,50 @@
 }
 
 @media screen and (max-width: 960px) {
-  .navbar__container {
-    display: flex;
-    justify-content: space-between;
-    height: 80px;
-    z-index: 1;
-    width: 100%;
-    max-width: 1300px;
-    padding: 0;
-  }
+  .navbar {
 
-  .navbar__menu {
-    display: grid;
-    grid-template-columns: auto;
-    margin: 0;
-    width: 100%;
-    position: absolute;
-    // top: -1000px;
-    // opacity: 0;
-    transition: all 500ms ease;
-    height: 50vh;
-    z-index: -1;
-    background: #131313;
+    .navbar__container {
+      display: flex;
+      justify-content: center;
+      height: 80px;
+      z-index: 1;
+      width: 100%;
+      max-width: 1300px;
+      padding: 0;
+
+      #navbar__logo {
+        padding-left: 25px;
+      }
+
+      .navbar__menu {
+        display: grid;
+        grid-template-columns: auto;
+        margin: 0;
+        width: 100%;
+        position: absolute;
+        // top: -1000px;
+        // opacity: 0;
+        transition: all 500ms ease;
+        height: 50vh;
+        z-index: -1;
+        background: #131313;
+
+        .navbar__btn {
+          padding-bottom: 2rem;
+        }
+
+        .navbar__item {
+          width: 100%;
+
+          .navbar__link {
+            text-align: center;
+            padding: 2rem;
+            width: 100%;
+            display: table;
+          }
+        }
+      }
+    }
   }
 
   .navbar__menu.active {
@@ -157,11 +180,7 @@
     transition: all 500ms ease;
     z-index: 99;
     height: 50vh;
-    font-size: 1.6rem;  
-  }
-
-  #navbar__logo {
-    padding-left: 25px;
+    font-size: 1.6rem;
   }
 
   .navbar__toggle {
@@ -175,32 +194,19 @@
     }
   }
 
-  .navbar__item {
-    width: 100%;
-  }
-
-  .navbar__links {
-    text-align: center;
-    padding: 2rem;
-    width: 100%;
-    display: table;
-  }
-
   #mobile-menu {
     position: absolute;
     top: 20%;
     right: 5%;
-    transform: translate(5%, 20%);
-  }
-
-  .navbar__btn {
-    padding-bottom: 2rem;
+    // transform: translate(5%, 20%);
   }
 
   .button {
     display: flex;
     justify-content: center;
-
+    align-items: center;
+    width: 80%;
+    height: 80px;
+    margin: 0;
   }
 }
-
