--- a/css/style.css
+++ b/css/style.css
@@ -476,7 +476,6 @@ body {
 @media screen and (max-width: 960px) {
   .navbar .navbar__container {
     display: flex;
-    justify-content: center;
     height: 80px;
     z-index: 1;
     width: 100%;
@@ -492,6 +491,8 @@ body {
     margin: 0;
     width: 100%;
     position: absolute;
+    top: -1000px;
+    opacity: 0;
     transition: all 500ms ease;
     height: 50vh;
     z-index: -1;
@@ -526,12 +527,26 @@ body {
     margin: 5px auto;
     transition: all 300ms ease-in-out;
     background: #fff;
+    display: block;
+    cursor: pointer;
   }
 
   #mobile-menu {
     position: absolute;
     top: 20%;
     right: 5%;
+  }
+
+  #mobile-menu.is-active .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  #mobile-menu.is-active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+
+  #mobile-menu.is-active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
   }
 
   .button {
