--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -131,7 +131,6 @@
 
     .navbar__container {
       display: flex;
-      justify-content: center;
       height: 80px;
       z-index: 1;
       width: 100%;
@@ -148,8 +147,8 @@
         margin: 0;
         width: 100%;
         position: absolute;
-        // top: -1000px;
-        // opacity: 0;
+        top: -1000px;
+        opacity: 0;
         transition: all 500ms ease;
         height: 50vh;
         z-index: -1;
@@ -191,6 +190,8 @@
       margin: 5px auto;
       transition: all 300ms ease-in-out;
       background: #fff;
+      display: block;
+      cursor: pointer;
     }
   }
 
@@ -199,6 +200,18 @@
     top: 20%;
     right: 5%;
     // transform: translate(5%, 20%);
+  }
+
+  #mobile-menu.is-active .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  #mobile-menu.is-active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+
+  #mobile-menu.is-active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
   }
 
   .button {
