--- a/css/style.css
+++ b/css/style.css
@@ -510,8 +510,7 @@ body {
     width: 100%;
     display: table;
   }
-
-  .navbar__menu.active {
+  .navbar .navbar__container .navbar__menu.active {
     background: #131313;
     top: 100%;
     opacity: 1;
@@ -521,6 +520,9 @@ body {
     font-size: 1.6rem;
   }
 
+  .navbar__toggle {
+    cursor: pointer;
+  }
   .navbar__toggle .bar {
     width: 25px;
     height: 3px;
