--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -130,6 +130,7 @@
   .navbar {
 
     .navbar__container {
+      align-items: center;
       display: flex;
       height: 80px;
       z-index: 1;
@@ -186,9 +187,11 @@
 
   .navbar__toggle {
     cursor: pointer;
-
+    padding: 4px;
+    margin-top: 4px;
     .bar {
       width: 25px;
+      border-radius: 4px;
       height: 3px;
       margin: 5px auto;
       transition: all 300ms ease-in-out;
@@ -210,11 +213,11 @@
   }
 
   #mobile-menu.is-active .bar:nth-child(1) {
-    transform: translateY(8px) rotate(45deg);
+    transform: translateY(8px) rotate(-45deg);
   }
 
   #mobile-menu.is-active .bar:nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg);
+    transform: translateY(-8px) rotate(45deg);
   }
 
   .button {
