--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -3,7 +3,7 @@
 
 :root {
   --clr-bg-main: white;
-  --clr-nav-bg: pink;
+  --clr-nav-bg: #202020;
 }
 
 ::-moz-selection {
@@ -67,14 +67,14 @@
     display: flex;
     justify-content: space-between;
     height: 80px;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     max-width: 1300px;
     margin: 0 auto;
     padding: 0 50px;
 
     #navbar__logo {
-      font-weight: 400;
+      font-weight: 800;
       font-size: 2rem;
       text-decoration: none;
       align-self: center;
@@ -151,12 +151,12 @@
         top: -1000px;
         opacity: 0;
         transition: all 500ms ease;
-        height: 50vh;
+        height: auto;
         z-index: -1;
         background: #131313;
 
         .navbar__btn {
-          padding-bottom: 2rem;
+          padding: 4.2rem 0 3.2rem 0;
         }
 
         .navbar__item {
