--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -88,6 +88,11 @@
       display: flex;
       align-items: center;
       cursor: pointer;
+
+      i {
+        margin-right: 0.5rem;
+        margin-bottom: 4px;
+      }
     }
 
     .fa-gem {
@@ -111,6 +116,11 @@
           text-decoration: none;
           padding: 0 1rem;
           height: 100%;
+
+          i {
+            margin-right: 1rem;
+            display: none;
+          }
         }
       }
 
@@ -128,12 +138,13 @@
 
 @media screen and (max-width: 960px) {
   .navbar {
-
+    position: sticky;
+    z-index: 99;
     .navbar__container {
       align-items: center;
       display: flex;
       height: 80px;
-      z-index: 1;
+      z-index: 99;
       width: 100%;
       max-width: 1300px;
       padding: 0;
@@ -144,7 +155,7 @@
 
       .navbar__menu {
         display: grid;
-        grid-template-columns: auto;
+        grid-template-columns: 1fr;
         margin: 0;
         width: 100%;
         position: absolute;
@@ -152,21 +163,26 @@
         opacity: 0;
         transition: all 500ms ease;
         height: auto;
-        z-index: -1;
+        z-index: 0;
         background: #131313;
 
         .navbar__btn {
-          padding: 4.2rem 0 3.2rem 0;
+          padding: 2rem 10rem;
         }
 
         .navbar__item {
           width: 100%;
+          height: 100%;
 
           .navbar__link {
-            text-align: center;
-            padding: 2rem;
+            display: flex;
+            justify-content: center;
+            padding: 2rem 0;
             width: 100%;
-            display: table;
+
+            i {
+              display: inline-block;
+            }
           }
         }
       }
