--- a/css/style.css
+++ b/css/style.css
@@ -357,19 +357,23 @@ body {
 }
 
 :root {
-  --clr-bg-main: white;
-  --clr-nav-bg: #202020;
+  --clr-bg-main: #ffd9ce;
+  --clr-nav-bg: #2d2a32;
+  --clr-nav-dark: #1E1C21;
+  --clr-blue: #9395d3;
+  --clr-highlight: #f6f740;
+  --clr-pink-btn: #eb5160;
 }
 
 ::-moz-selection {
   /* Code for Firefox */
-  color: cornflowerblue;
-  background: white;
+  color: white;
+  background: var(--clr-blue);
 }
 
 ::selection {
-  color: cornflowerblue;
-  background: white;
+  color: white;
+  background: var(--clr-blue);
 }
 
 *,
@@ -378,6 +382,10 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+body {
+  background-color: var(--clr-bg-main);
 }
 
 .button {
@@ -391,20 +399,21 @@ body {
   border: none;
   outline: none;
   border-radius: 4px;
-  background: #f77062;
-  color: #fff;
+  background: var(--clr-bg-main);
+  color: var(--clr-nav-bg);
 }
 
 .button:hover,
 .button:focus {
-  background: #4837ff;
-  transition: all 300ms ease;
+  background: var(--clr-pink-btn);
+  transition: all 175ms ease;
+  color: #fff;
 }
 
 .navbar__link:hover,
 .navbar__link:focus {
-  background: #f77062;
-  transition: all 300ms ease;
+  background: var(--clr-pink-btn);
+  transition: all 175ms ease-out;
 }
 
 .navbar {
@@ -434,7 +443,7 @@ body {
   text-decoration: none;
   align-self: center;
   background-color: black;
-  background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+  background-image: linear-gradient(to top, var(--clr-pink-btn) 0%, var(--clr-bg-main) 100%);
   background-size: 100%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -472,6 +481,7 @@ body {
 .navbar .navbar__container .navbar__menu .navbar__item .navbar__link i {
   margin-right: 1rem;
   display: none;
+  color: #fff;
 }
 .navbar .navbar__container .navbar__menu .navbar__btn {
   display: flex;
@@ -509,7 +519,7 @@ body {
     transition: all 500ms ease;
     height: auto;
     z-index: 0;
-    background: #131313;
+    background: var(--clr-nav-dark);
   }
   .navbar .navbar__container .navbar__menu .navbar__btn {
     padding: 2rem 10rem;
@@ -528,7 +538,7 @@ body {
     display: inline-block;
   }
   .navbar .navbar__container .navbar__menu.active {
-    background: #131313;
+    background: var(--clr-nav-dark);
     top: 100%;
     opacity: 1;
     transition: all 500ms ease;
@@ -579,6 +589,21 @@ body {
     height: 80px;
     margin: 0;
   }
+}
+.main {
+  background-color: white;
+}
+
+.main__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  justify-self: center;
+  margin: 0 auto;
+  height: 90vh;
+  background-color: white;
+  z-index: 1;
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
