--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
 /* Open Sans */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;800;900&display=swap");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -361,8 +363,10 @@ body {
   --clr-nav-bg: #2d2a32;
   --clr-nav-dark: #1E1C21;
   --clr-blue: #9395d3;
+  --clr-purple: #b836e7;
   --clr-highlight: #f6f740;
   --clr-pink-btn: #eb5160;
+  --clr-pink-dark: #e73648;
 }
 
 ::-moz-selection {
@@ -393,19 +397,21 @@ body {
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  padding: 10px 20px;
+  padding: 30px 30px;
   height: 100%;
   width: 100%;
   border: none;
   outline: none;
   border-radius: 4px;
-  background: var(--clr-bg-main);
-  color: var(--clr-nav-bg);
+  color: #fff;
+}
+.button img {
+  fill: white;
 }
 
 .button:hover,
 .button:focus {
-  background: var(--clr-pink-btn);
+  transform: scale(130%);
   transition: all 175ms ease;
   color: #fff;
 }
@@ -438,6 +444,7 @@ body {
   padding: 0 50px;
 }
 .navbar .navbar__container #navbar__logo {
+  position: relative;
   font-weight: 800;
   font-size: 2rem;
   text-decoration: none;
@@ -451,11 +458,30 @@ body {
   -moz-text-fill-color: transparent;
   display: flex;
   align-items: center;
+  justify-content: center;
   cursor: pointer;
+  margin-left: 1rem;
 }
 .navbar .navbar__container #navbar__logo i {
-  margin-right: 0.5rem;
+  margin-right: 1rem;
   margin-bottom: 4px;
+  background-color: black;
+  background-image: linear-gradient(to top, var(--clr-pink-btn) 0%, var(--clr-bg-main) 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+.navbar .navbar__container #navbar__logo::before {
+  content: "";
+  position: absolute;
+  width: calc(100% + 2rem);
+  height: calc(100% + 1rem);
+  padding: 1rem;
+  z-index: -1;
+  background: var(--clr-nav-dark);
+  border-radius: 40px;
 }
 .navbar .navbar__container .fa-gem {
   margin-right: 0.5rem;
@@ -485,7 +511,7 @@ body {
 }
 .navbar .navbar__container .navbar__menu .navbar__btn {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   padding: 0 1rem 0 1rem;
   width: 100%;
@@ -591,7 +617,7 @@ body {
   }
 }
 .main {
-  background-color: white;
+  background-color: var(--clr-bg-main);
 }
 
 .main__container {
@@ -601,9 +627,36 @@ body {
   justify-self: center;
   margin: 0 auto;
   height: 90vh;
-  background-color: white;
+  background-color: var(--clr-bg-main);
   z-index: 1;
   width: 100%;
+  max-width: 1300px;
+  padding: 0 50px;
+}
+
+.main__content h1 {
+  font-size: 4rem;
+  line-height: 1.4em;
+  letter-spacing: -0.15rem;
+  background-color: var(--clr-nav-dark);
+  background-image: linear-gradient(to top, var(--clr-pink-dark) 0%, var(--clr-pink-btn) 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+
+.main__content h2 {
+  font-size: 3rem;
+  line-height: 0.9em;
+  background-color: var(--clr-nav-dark);
+  background-image: linear-gradient(to top, var(--clr-purple) 0%, var(--clr-blue) 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
 }
 
 /*# sourceMappingURL=style.css.map */
