--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -6,8 +6,10 @@
   --clr-nav-bg: #2d2a32;
   --clr-nav-dark: #1E1C21;
   --clr-blue: #9395d3;
+  --clr-purple: #b836e7;
   --clr-highlight: #f6f740;
   --clr-pink-btn: #eb5160;
+  --clr-pink-dark: #e73648;
 }
 
 ::-moz-selection {
@@ -38,19 +40,22 @@ body {
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  padding: 10px 20px;
+  padding: 30px 30px;
   height: 100%;
   width: 100%;
   border: none;
   outline: none;
   border-radius: 4px;
-  background: var(--clr-bg-main);
-  color: var(--clr-nav-bg);
+  color: #fff;
+
+  img {
+    fill: white;
+  }
 }
 
 .button:hover,
 .button:focus {
-  background: var(--clr-pink-btn);
+  transform: scale(130%);
   transition: all 175ms ease;
   color: #fff;
 }
@@ -84,6 +89,7 @@ body {
     padding: 0 50px;
 
     #navbar__logo {
+      position: relative;
       font-weight: 800;
       font-size: 2rem;
       text-decoration: none;
@@ -97,12 +103,33 @@ body {
       -moz-text-fill-color: transparent;
       display: flex;
       align-items: center;
+      justify-content: center;
       cursor: pointer;
+      margin-left: 1rem;
+
 
       i {
-        margin-right: 0.5rem;
+        margin-right: 1rem;
         margin-bottom: 4px;
+        background-color: black;
+        background-image: linear-gradient(to top, var(--clr-pink-btn) 0%, var(--clr-bg-main) 100%);
+        background-size: 100%;
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        -moz-text-fill-color: transparent;
       }
+    }
+
+    #navbar__logo::before {
+      content: '';
+      position: absolute;
+      width: calc(100% + 2rem);
+      height: calc(100% + 1rem);
+      padding: 1rem;
+      z-index: -1;
+      background: var(--clr-nav-dark);
+      border-radius: 40px;
     }
 
     .fa-gem {
@@ -137,7 +164,7 @@ body {
 
       .navbar__btn {
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         padding: 0 1rem 0 1rem;
         width: 100%;
@@ -151,6 +178,7 @@ body {
   .navbar {
     position: sticky;
     z-index: 99;
+
     .navbar__container {
       align-items: center;
       display: flex;
@@ -216,6 +244,7 @@ body {
     cursor: pointer;
     padding: 4px;
     margin-top: 4px;
+
     .bar {
       width: 25px;
       border-radius: 4px;
@@ -261,7 +290,7 @@ body {
 // HERO
 
 .main {
-  background-color: white;
+  background-color: var(--clr-bg-main);
 }
 
 .main__container {
@@ -271,7 +300,34 @@ body {
   justify-self: center;
   margin: 0 auto;
   height: 90vh;
-  background-color: white;
+  background-color: var(--clr-bg-main);
   z-index: 1;
   width: 100%;
+  max-width: 1300px;
+  padding: 0 50px;
+}
+
+.main__content h1 {
+  font-size: 4rem;
+  line-height: 1.4em;
+  letter-spacing: -0.15rem;
+  background-color: var(--clr-nav-dark);
+  background-image: linear-gradient(to top, var(--clr-pink-dark) 0%, var(--clr-pink-btn) 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+
+.main__content h2 {
+  font-size: 3rem;
+  line-height: 0.9em;
+  background-color: var(--clr-nav-dark);
+  background-image: linear-gradient(to top, var(--clr-purple) 0%, var(--clr-blue) 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
 }
