--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -293,26 +293,46 @@ body {
 
 .main {
   background-color: var(--clr-bg-main);
+
+
+  .main__container {
+    display: flex;
+    align-items: center;
+    justify-self: center;
+    justify-content: space-between;
+    overflow: hidden;
+    margin: 0 auto;
+    height: 90vh;
+    background-color: var(--clr-bg-main);
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    padding: 0 50px;
+
+    .main__img--container {
+      flex-grow: 1;
+
+      img {
+        height: 100%;
+        width: 50vw;
+        max-width: 650px;
+        min-width: 400px;
+        float: right;
+      }
+    }
+  }
 }
 
-.main__container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-  justify-self: center;
-  margin: 0 auto;
-  height: 90vh;
-  background-color: var(--clr-bg-main);
-  z-index: 1;
-  width: 100%;
-  max-width: 1300px;
-  padding: 0 50px;
+.main__content {
+  z-index: 3;
+  flex-grow: 0;
 }
 
 .main__content h1 {
   font-size: 4rem;
   line-height: 1.4em;
   letter-spacing: -0.15rem;
+  padding-right: 5px;
   background-color: var(--clr-nav-dark);
   background-image: linear-gradient(to top, var(--clr-pink-dark) 0%, var(--clr-pink-btn) 100%);
   background-size: 100%;
@@ -334,47 +354,58 @@ body {
   -moz-text-fill-color: transparent;
 }
 
-.main__content p {
-  margin-top: 1rem;
-  font-size: 2rem;
-  font-weight: 200;
-}
-
 .meet {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: var(--clr-background-light);
-    width: 19em;
-    padding: 1em;
-    border-radius: 35px;
-    margin-top: 4rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: var(--clr-background-light);
+  width: 19em;
+  padding: 1em;
+  border-radius: 35px;
+  margin-top: 4rem;
 
-    i {
-      position: relative;
-      margin-right: 10px;
-      color: var(--clr-purple);
-      animation: bouncy 400ms alternate-reverse 1s infinite;
+  i {
+    position: relative;
+    margin-right: 10px;
+    color: var(--clr-purple);
+    animation: bouncy 400ms alternate-reverse 1s infinite;
+  }
+
+  h3 {
+
+    a {
+      text-decoration: none;
+      color: #fff;
+      background-color: rgba(235, 81, 96, 0.4);
+      padding: 0.25rem 1rem;
+      border-radius: 30px;
+      transition: all 200ms ease;
+
+      &:hover {
+        background: rgba(45, 42, 50, 0.8);
+        color: white;
+      }
     }
 
-    h3 {
-      
-      a {
-        text-decoration: none;
-        color: #fff;
-        background-color: rgba(235, 81, 96, 0.4);
-        padding: 0.25rem 1rem;
-        border-radius: 30px;
-        transition: all 200ms ease;
-
-        &:hover {
-          background: rgba(45, 42, 50, 0.8);
-          color: white;
-        }
-      }
-      span {
-        color: var(--clr-blue);
-        margin-left: 10px;
-      }
+    span {
+      color: var(--clr-blue);
+      margin-left: 10px;
     }
   }
+}
+
+@media screen and (max-width: 960px) {
+  .main__container {
+    flex-direction: column;
+    margin-top: 4rem;
+
+    .main__content {
+      margin-top: 4rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+    }
+  }
+}
