--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -33,9 +33,9 @@
   padding: 0;
 }
 
-* {
-  outline: 1px solid #f00 !important;
-}
+// * {
+//   outline: 1px solid #f00 !important;
+// }
 
 body {
   background-color: var(--clr-bg-main);
@@ -325,9 +325,9 @@ body {
 
       img {
         height: 100%;
-        width: 50vw;
+        width: 52vw;
         max-width: 650px;
-        min-width: 200px;
+        min-width: 350px;
         float: right;
       }
     }
@@ -409,6 +409,14 @@ body {
   .main__container {
     flex-direction: column;
     margin-top: 4rem;
+
+    .main__img--container {
+
+      img {
+        width: 40vw;
+        height: auto;
+      }
+    }
 
     .main__content {
       margin-top: 4rem;
