--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -321,7 +321,6 @@ body {
 
     .main__img--container {
       flex-grow: 1;
-      overflow: hidden;
 
       img {
         height: 100%;
@@ -406,32 +405,40 @@ body {
 }
 
 @media screen and (max-width: 960px) {
-  .main__container {
-    flex-direction: column;
-    margin-top: 4rem;
-
-    .main__img--container {
-
-      img {
-        width: 40vw;
-        height: auto;
-      }
-    }
-
-    .main__content {
-      margin-top: 4rem;
-      display: flex;
+  .main {
+    .main__container {
       flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      
-      h1 {
-        font-size: 3rem;
+      margin-top: 1rem;
+
+      .main__img--container {
+
+        img {
+          width: 60vw;
+          max-width: 440px;
+          height: auto;
+          margin-top: 2rem;
+        }
       }
 
-      h2 {
-        font-size: 2rem;
+      .main__content {
+        margin-top: 4rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+
+        h1 {
+          font-size: 3rem;
+        }
+
+        h2 {
+          font-size: 2rem;
+        }
+      }
+
+      .meet {
+        margin-top: 3rem;
       }
     }
   }
