--- a/css/style.css
+++ b/css/style.css
@@ -489,8 +489,8 @@ body {
   content: "";
   position: absolute;
   width: calc(100% + 2rem);
-  height: calc(100% + 1rem);
-  padding: 1rem;
+  height: calc(100% + 0.25rem);
+  padding: 0 1rem;
   z-index: -1;
   background: #fff;
   border-radius: 40px;
@@ -644,7 +644,7 @@ body {
   justify-content: space-between;
   overflow: hidden;
   margin: 0 auto;
-  height: 90vh;
+  height: calc(100vh - 80px);
   background-color: var(--clr-bg-main);
   z-index: 1;
   width: 100%;
@@ -729,7 +729,6 @@ body {
 @media screen and (max-width: 960px) {
   .main .main__container {
     flex-direction: column;
-    margin-top: 1rem;
   }
   .main .main__container .main__img--container img {
     width: 60vw;
