--- a/css/style.css
+++ b/css/style.css
@@ -368,6 +368,16 @@ body {
     transform: translateX(-7px);
   }
 }
+@keyframes bouncy2 {
+  0% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  100% {
+    -webkit-transform: translateY(-7px);
+    transform: translateY(-7px);
+  }
+}
 :root {
   --clr-bg-main: #ffd9ce;
   --clr-nav-bg: rgb(45, 42, 50);
@@ -642,7 +652,6 @@ body {
   align-items: center;
   justify-self: center;
   justify-content: space-between;
-  overflow: hidden;
   margin: 0 auto;
   height: calc(100vh - 80px);
   background-color: var(--clr-bg-main);
@@ -660,6 +669,7 @@ body {
   max-width: 650px;
   min-width: 350px;
   float: right;
+  z-index: 99;
 }
 
 .main__content {
@@ -732,7 +742,7 @@ body {
   }
   .main .main__container .main__img--container img {
     width: 60vw;
-    max-width: 440px;
+    max-width: 420px;
     height: auto;
     margin-top: 2rem;
   }
@@ -753,6 +763,11 @@ body {
   .main .main__container .meet {
     margin-top: 3rem;
   }
+}
+.projects__main {
+  height: 100vh;
+  background-color: var(--clr-nav-dark);
+  clip-path: polygon(50% 5%, 55% 0, 100% 0, 100% 100%, 0 100%, 0 0, 45% 0);
 }
 
 /*# sourceMappingURL=style.css.map */
