--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -308,6 +308,20 @@ body {
 .main {
   background-color: var(--clr-bg-main);
 
+  .arrow-container {
+    position: absolute;
+    bottom: -50px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
+    margin-bottom: 50px;
+
+    i {
+      animation: bounce 1500ms infinite ease-out;
+    }
+  }
 
   .main__container {
     display: flex;
@@ -450,5 +464,5 @@ body {
 .projects__main {
   height: 100vh;
   background-color: var(--clr-nav-dark);
-  clip-path: polygon(50% 5%, 55% 0, 100% 0, 100% 100%, 0 100%, 0 0, 45% 0);
+  clip-path: polygon(50% 3%, 55% 0, 100% 0, 100% 100%, 0 100%, 0 0, 45% 0);
 }
