--- a/scss/_keyframes.scss
+++ b/scss/_keyframes.scss
@@ -19,3 +19,9 @@
     transform: translateY(-7px);
   }
 }
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+    40% {transform: translateY(-10px);}
+    60% {transform: translateY(-5px);}
+}
