--- a/css/style.css
+++ b/css/style.css
@@ -477,8 +477,9 @@ body {
 }
 .navbar .navbar__container #navbar__logo {
   position: relative;
-  font-weight: 700;
-  letter-spacing: -0.1rem;
+  font-weight: 900;
+  font-family: "Montserrat";
+  letter-spacing: -0.075rem;
   font-size: 2rem;
   padding: 0 1rem;
   text-decoration: none;
