--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -98,8 +98,9 @@ body {
 
     #navbar__logo {
       position: relative;
-      font-weight: 700;
-      letter-spacing: -0.1rem;
+      font-weight: 900;
+      font-family: 'Montserrat';
+      letter-spacing: -0.075rem;
       font-size: 2rem;
       padding: 0 1rem;
       text-decoration: none;
