--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -35,9 +35,9 @@
 
 
 
-// * {
-//   outline: 1px solid #f00 !important;
-// }
+* {
+  outline: 1px solid #f00 !important;
+}
 
 body {
   background-color: var(--clr-bg-main);
@@ -463,7 +463,7 @@ body {
 }
 
 .portfolio {
-  height: 150vh;
+  height: 280vh;
   background-color: var(--clr-nav-dark);
   clip-path: polygon(50% 3%, 55% 0, 100% 0, 100% 100%, 0 100%, 0 0, 45% 0);
 }
@@ -473,21 +473,30 @@ body {
   align-items: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: sspace-between;
+
+  h1 {
+    color: white;
+    font-size: 4rem;
+    margin: 10rem 0;
+  }
 
   .portfolio-container {
-    margin-top: 1em;
+    margin-top: 1rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin-bottom: 0;
     padding: 0;
+    height: 100%;
 
     img {
-      width: 60vw;
+      width: 40vw;
+      min-width: 350px;
+      height: auto;
       border-radius: 25px;
-      filter: drop-shadow(-10px 10px 4px rgba(0, 0, 0, 0.301));
+      filter: drop-shadow(-10px 10px 4px rgba(0, 0, 0, 0.5));
 
     }
 
@@ -504,25 +513,27 @@ body {
         justify-content: space-between;
         margin-top: 5px;
         height: 170px;
-        width: 60%;
+        width: 100%;
       }
 
       .subtitle {
         padding: 0;
         background: white;
-        color: #3A0CA3;
+        color: var(--clr-nav-dark);
         font-weight: 600;
         letter-spacing: .335rem;
         line-height: 1em;
         text-align: center;
         border-radius: 3px;
+        margin-top: 1rem;
       }
 
       .featured-title {
         font-weight: 800;
+        color: #fff;
         font-size: 34px;
         letter-spacing: 0;
-        margin-bottom: 10px;
+        margin: .5rem 0;
       }
 
       .featured-desc {
@@ -537,7 +548,7 @@ body {
         width: auto;
         display: grid;
         grid-template-rows: 1/1;
-        grid-template: "a b"40vw;
+        grid-template: "a b"20vw;
         gap: 2em;
         margin: 20px 0;
 
@@ -545,15 +556,15 @@ body {
           outline: none;
           border-style: none;
           height: 50px;
-          width: 100%;
-          background: black;
+          width: auto;
+          background: var(--clr-blue);
           border-radius: 25px;
-          border: 3px solid black;
+          border: 3px solid #fff;
 
           a {
             color: white;
             font-weight: 600;
-            padding: 1em 7em;
+            padding: 1em 1em;
             transition: all 150ms ease;
             border-radius: 25px;
           }
