--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -463,7 +463,7 @@ body {
 }
 
 .portfolio {
-  height: 280vh;
+  height: 100%;
   background-color: var(--clr-nav-dark);
   clip-path: polygon(50% 3%, 55% 0, 100% 0, 100% 100%, 0 100%, 0 0, 45% 0);
 }
@@ -478,7 +478,9 @@ body {
   h1 {
     color: white;
     font-size: 4rem;
-    margin: 10rem 0;
+    margin-top: 10rem;
+    letter-spacing: -0.075rem;
+    text-align: center;
   }
 
   .portfolio-container {
@@ -487,9 +489,9 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 0;
+    margin-bottom: 4rem;
     padding: 0;
-    height: 100%;
+    height: auto;
 
     img {
       width: 40vw;
@@ -567,6 +569,7 @@ body {
             padding: 1em 1em;
             transition: all 150ms ease;
             border-radius: 25px;
+            text-decoration: none;
           }
 
           &:hover {
