--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -594,7 +594,7 @@ body {
 
 .footer__container {
   background-color: black;
-  padding: 5rem 0;
+  padding: 2rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -602,21 +602,23 @@ body {
 }
 
 #footer__logo {
-  color: #fff;
+  color: black;
+  padding: 1rem;
+  border-radius: 50%;
   display: flex;
   align-items: center;
   cursor: poiner;
   text-decoration: none;
   font-size: 2rem;
-
+  background-color: #fff;
 }
 
 .footer__links {
-  width: 100%;
+  width: 80%;
   max-width: 1000px;
   display: flex;
   justify-content: center;
-
+  line-height: 0.9;
 }
 
 .footer__link--wrapper {
@@ -638,10 +640,11 @@ body {
 
   h2 {
     margin-bottom: 16px;
+    font-weight: 300;
   }
 }
 
-.footer__link--items > h2 {
+.footer__link--items>h2 {
   color: #fff;
 }
 
@@ -652,13 +655,14 @@ body {
 }
 
 .footer__link--items a:hover {
-  color: var(--clr-blue);
+  color: var(--clr-pink-dark);
   transition: 300ms ease;
 }
 
 .social__icon--link {
   color: #fff;
   font-size: 24px;
+  padding: 1rem;
 }
 
 .social__media {
@@ -670,7 +674,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 90%;
+  width: 80%;
   max-width: 1000px;
   margin: 40px auto 0 auto;
 }
@@ -680,7 +684,7 @@ body {
   justify-content: space-between;
   align-items: center;
   width: 240px;
-
+  
 }
 
 .social__logo {
@@ -693,4 +697,19 @@ body {
   display: flex;
   align-items: center;
   margin-bottom: 16px;
+}
+
+@media screen and (max-width: 600px) {
+  .footer__links {
+    flex-direction: column;
+  }
+
+  .footer__link--items {
+    align-items: center;
+    text-align: center;
+  }
+
+  .footer__link--wrapper {
+    justify-content: center;
+  }
 }
