--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -674,7 +674,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 80%;
+  width: 32%;
   max-width: 1000px;
   margin: 40px auto 0 auto;
 }
@@ -711,5 +711,9 @@ body {
 
   .footer__link--wrapper {
     justify-content: center;
+  }
+
+  .social__media--wrap {
+    width: 100%;
   }
 }
