--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -599,6 +599,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 300px;
 }
 
 #footer__logo {
@@ -677,6 +678,7 @@ body {
   width: 32%;
   max-width: 1000px;
   margin: 40px auto 0 auto;
+
 }
 
 .social__icons {
@@ -684,7 +686,11 @@ body {
   justify-content: space-between;
   align-items: center;
   width: 240px;
-  
+}
+
+.social__icon--link:hover {
+  transform: scale(130%);
+  transition: 175ms ease;
 }
 
 .social__logo {
