--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -78,7 +78,7 @@ body {
 }
 
 .navbar {
-  background: var(--clr-nav-bg);
+  background: #101010;
   height: 80px;
   display: flex;
   justify-content: center;
@@ -108,7 +108,7 @@ body {
       text-decoration: none;
       align-self: center;
       background-color: black;
-      background-image: linear-gradient(to top, var(--clr-nav-dark) 0%, #606060 100%);
+      background-image: linear-gradient(to top, #101010 0%, #404040 100%);
       background-size: 100%;
       -webkit-background-clip: text;
       -moz-background-clip: text;
@@ -124,7 +124,7 @@ body {
       i {
         margin-right: 1rem;
         background-color: black;
-        background-image: linear-gradient(to top, var(--clr-nav-dark) 0%, #606060 100%);
+        background-image: linear-gradient(to top, #101010 0%, #404040 100%);
         background-size: 100%;
         -webkit-background-clip: text;
         -moz-background-clip: text;
@@ -595,7 +595,7 @@ body {
 // footer
 
 .footer__container {
-  background-color: black;
+  background-color: #101010;
   padding: 2rem 0;
   display: flex;
   flex-direction: column;
@@ -605,7 +605,7 @@ body {
 }
 
 #footer__logo {
-  color: black;
+  color: #101010;
   padding: 1rem;
   border-radius: 50%;
   display: flex;
