--- a/scss/_-style.scss
+++ b/scss/_-style.scss
@@ -360,7 +360,7 @@ body {
 }
 
 .main__content h1 {
-  font-size: 4rem;
+  font-size: 5rem;
   line-height: 1.4em;
   letter-spacing: -0.15rem;
   padding-right: 5px;
@@ -374,7 +374,7 @@ body {
 }
 
 .main__content h2 {
-  font-size: 3rem;
+  font-size: 3.5rem;
   line-height: 0.9em;
   background-color: var(--clr-nav-dark);
   background-image: linear-gradient(to top, var(--clr-purple) 0%, var(--clr-blue) 100%);
@@ -441,7 +441,7 @@ body {
       }
 
       .main__content {
-        margin-top: 4rem;
+        
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -453,6 +453,7 @@ body {
         }
 
         h2 {
+          margin-top: 0;
           font-size: 2rem;
         }
       }
