--- a/scss/_keyframes.scss
+++ b/scss/_keyframes.scss
@@ -25,3 +25,9 @@
     40% {transform: translateY(-10px);}
     60% {transform: translateY(-5px);}
 }
+
+@keyframes wiggle {
+  0%, 20%, 60%, 100% {transform: rotate(0deg);}
+    40% {transform: rotate(30deg);}
+    80% {transform: rotate(-30deg);}
+}
