--- a/css/style.css
+++ b/css/style.css
@@ -391,13 +391,65 @@ body {
 }
 @keyframes wiggle {
   0%, 20%, 60%, 100% {
-    transform: rotate(50deg);
+    transform: rotate(1deg);
   }
   40% {
-    transform: rotate(30deg);
+    transform: rotate(2deg);
   }
   80% {
-    transform: rotate(-30deg);
+    transform: rotate(-1deg);
+  }
+}
+@keyframes wiggle2 {
+  0%, 10%, 50%, 100% {
+    transform: rotate(1deg);
+  }
+  30% {
+    transform: rotate(2deg);
+  }
+  70% {
+    transform: rotate(-1deg);
+  }
+}
+@keyframes wiggle3 {
+  0%, 20%, 60% {
+    transform: translate(0px, 0px);
+  }
+  40% {
+    transform: translate(4px, 5px);
+  }
+  70% {
+    transform: translate(6px, -3px);
+  }
+  90% {
+    transform: translate(10px, 3px);
+  }
+}
+@keyframes wiggle4 {
+  0%, 20%, 60%, 100% {
+    transform: translate(0, 5px);
+  }
+  40% {
+    transform: translate(0, 0);
+  }
+}
+@keyframes wiggle5 {
+  0%, 20%, 60%, 100% {
+    transform: translate(0, 0px);
+  }
+  40% {
+    transform: translate(0, 5px);
+  }
+}
+@keyframes wiggle6 {
+  0%, 20%, 60%, 90% {
+    transform: rotate(1deg);
+  }
+  40% {
+    transform: rotate(15deg);
+  }
+  80% {
+    transform: rotate(-10deg);
   }
 }
 :root {
@@ -712,8 +764,29 @@ body {
   float: right;
   z-index: 99;
 }
+.main .main__container .main__img--container svg .hashtag {
+  animation: wiggle 0.8s infinite;
+  transform-origin: 0 0;
+}
+.main .main__container .main__img--container svg .squiggle {
+  animation: wiggle2 1s infinite;
+}
+.main .main__container .main__img--container svg .ex {
+  animation: wiggle3 1s infinite;
+}
+.main .main__container .main__img--container svg .tilda1 {
+  animation: wiggle4 1s infinite ease;
+}
+.main .main__container .main__img--container svg .tilda2 {
+  animation: wiggle5 1s infinite ease;
+}
 .main .main__container .main__img--container svg .circle {
-  animation: wiggle 1 infinite ease;
+  animation: wiggle6 0.9s infinite ease;
+  transform-origin: 120px 600px;
+}
+.main .main__container .main__img--container svg .pyramid {
+  animation: wiggle6 0.9s infinite ease;
+  transform-origin: 720px 300px;
 }
 
 .main__content {
