--- a/scss/_keyframes.scss
+++ b/scss/_keyframes.scss
@@ -27,7 +27,32 @@
 }
 
 @keyframes wiggle {
-  0%, 20%, 60%, 100% {transform: rotate(50deg);}
-    40% {transform: rotate(30deg);}
-    80% {transform: rotate(-30deg);}
+  0%, 20%, 60%, 100% {transform: rotate(1deg);}
+    40% {transform: rotate(2deg);}
+    80% {transform: rotate(-1deg);}
+}
+@keyframes wiggle2 {
+  0%, 10%, 50%, 100% {transform: rotate(1deg);}
+    30% {transform: rotate(2deg);}
+    70% {transform: rotate(-1deg);}
+}
+@keyframes wiggle3 {
+  0%, 20%, 60% {transform: translate(0px, 0px);}
+    40% {transform: translate(4px, 5px);}
+    70% {transform: translate(6px, -3px);}
+    90% {transform: translate(10px, 3px);}
+}
+@keyframes wiggle4 {
+  0%, 20%, 60%, 100% {transform: translate(0, 5px);}
+    40% {transform: translate(0, 0);}
+}
+@keyframes wiggle5 {
+  0%, 20%, 60%, 100% {transform: translate(0, 0px);}
+    40% {transform: translate(0, 5px);}
+}
+
+@keyframes wiggle6 {
+  0%, 20%, 60%, 90% {transform: rotate(1deg);}
+    40% {transform: rotate(15deg);}
+    80% {transform: rotate(-10deg);}
 }
